# wbk_hackathon

./: .gitignore  API.md  README.md  docker-compose.remote-gpu.yml  docker-compose.yml  pitch-info.md  pyproject.toml
.agent/: CHANGELOG.md  README.md
.agent/Decisions/: 0002-perception-model-stack.md  (+17 more)
contracts/: grip_api.md  movement_api.md  scene_camera_api.md  sim_scene_capture.md  simulation_api.md
damage/: Dockerfile  README.md  app.py  auth.py  client.py  config.py  prompts.py  reference.py  requirements.txt  schemas.py
deploy/: README.md  sim_named_poses.json
docs/: architecture.md
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
orchestrator/: Dockerfile  README.md  actions.py  app.py  config.py  dry_run.py  factory.py  loop.py  mocks.py  models.py  requirements.txt  slots.py
perception/: .dockerignore  Dockerfile  Dockerfile.dds  Dockerfile.sam3  README.md  requirements-base.txt  requirements-dds.txt  requirements-sam3.txt  requirements.txt  supervisord.conf
pose/: README.md
robot_control/: .dockerignore  Dockerfile  README.md  api_client.py  requirements.txt  start_jetson_backend.sh
scene_camera/: Dockerfile  README.md  app.py  auth.py  backend.py  config.py  imaging.py  requirements.txt  schemas.py
tests/: README.md  conftest.py
training/: README.md  clean_dataset.py  deploy_gigapose_2d.sh  deploy_yolo_seg.sh  deploy_yolo_weights.sh  env.sh  isaac_to_yolo.py  run_probes.sh  setup_server.sh  tensorboard.sh  train.py  train_supervised.sh
(+165 files in other folders)
